--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                   <!--以上p標籤內使用css的 p::first-line 及 p::first-letter 特效-->
                <hr>
                <h2 class="line1">Education</h2><!--使用css透明度特效-->
-                  <p><img src="http://military.ncu.edu.tw/images/homepage/ncu.png" width="30" height="20">English Department, National Central University</p>
+                  <p><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/NCULogo.svg/1200px-NCULogo.svg.png" width="30" height="20">English Department, National Central University</p>
                <br>
              <h2>Skills</h2>
               <ul>
