--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     alert('Welcome');
                 }
            </script>
-           <h2>reference link</h2>
+           <h2>Reference link</h2>
               <a href="https://summerelsa2022.github.io/">Click me</a>
      </body>
 </html>
